Assignment 3 ready for demo

--- a/Assignment3/Spring-2025-Demo-3-REST-master/src/main/resources/application.properties
+++ b/Assignment3/Spring-2025-Demo-3-REST-master/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=Spring-2025-Demo-3-REST
 
+# Temp to reset database
+#spring.jpa.hibernate.ddl-auto=create-drop
+
 #Josh Taylor, In Class Example
 #
 #Only for testing, must be changed in production
@@ -14,6 +17,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/spring-2025-demo-3-rest
 spring.datasource.username=root
 spring.datasource.password=roottoor
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+server.port=8081
 
 # Log JPA queries
 # Comment this in production
